<resources>
    <string name="app_name">RMC Pocket Guide</string>
    <string name="gridviewexample">GridView</string>
    <string name="draganddrop">Drag and Drop</string>

    <string name="animateaddition">Animate addition</string>
    <string name="expandablelistitemadapter">Expand list items</string>
    <string name="itemdeleted">Item deleted</string>
    <string name="taptoundo">Tap to undo</string>
    <string name="explainexpand">Tap on cards to expand or collapse them</string>
    <string name="expandorcollapsecard">This is card number %d</string>
    <string name="row_number">This is row number %d</string>
    <string name="header">Header %d</string>
    <string name="card_number">This is card %d</string>
    <string name="thanks">Thank you!</string>
    <string name="exception">Oops! Something went wrong!</string>
    <string name="moved">\'%1$s\' moved to position %2$s</string>
    <string name="removed_positions">Removed positions: %s</string>
    <string name="tap_to_insert">Tap on an item to insert a new item</string>
    <string name="newly_added_item">This is newly added item %d</string>

    <string name="activity_dynamiclistview_header">Touch the grip or long press an item to drag.\nSwipe to dismiss.\nTap an item to insert a new item.</string>


    <string name="gridview">Kementerian Pendidikan Malaysia</string>
    <string name="appearance">Ministry of Science Technology and Innovation (MOSTI)</string>
    <string name="itemmanipulation">Geran Universiti Penyelidikan (GUP)</string>
    <string name="stickylistheaders">Others</string>
    <string name="dynamiclistview">Garis Panduan Pengurusan Proposal</string>
    <string name="garis_panduan_aktiviti">Garis Panduan Pengurusan Aktiviti</string>
    <string name="garis_panduan_perlantikan">Garis Panduan Pengurusan Perlantikan</string>
    <string name="garis_panduan_pemantauan">Garis Panduan Pengurusan Pemantauan</string>

</resources>
