<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    tools:ignore="UnusedAttribute">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="4dp"
        android:scrollbarStyle="outsideOverlay"
        android:weightSum="4">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:layout_weight="1"
            android:layout_marginBottom="4dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onPanduanClicked">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:scaleType="center"
                android:src="@drawable/img_manipulation_swipetodismiss" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/green_transparent"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/dynamiclistview"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </FrameLayout>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:layout_weight="1"
            android:layout_marginBottom="4dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onAktivityClicked">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:scaleType="center"
                android:src="@drawable/img_manipulation_expand" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/red_transparent"
                android:id="@+id/frameactivity"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/garis_panduan_aktiviti"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </FrameLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:layout_weight="1"
            android:layout_marginBottom="4dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onPerlantikanClicked">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:scaleType="center"
                android:src="@drawable/img_manipulation_expand" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/green_transparent"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/garis_panduan_perlantikan"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </FrameLayout>
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:layout_weight="1"
            android:layout_marginBottom="4dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="onPemantauanClicked">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:scaleType="center"
                android:src="@drawable/img_manipulation_expand" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/red_transparent"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/garis_panduan_pemantauan"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />

            </FrameLayout>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>